<resources>
    <string name="app_name">Leave Manager</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="apply_for_leave">apply for leave</string>
    <string name="space">Space</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="sick">Sick</string>
    <string name="casual">Casual</string>
    <string name="all">All</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="annual">Annual</string>

</resources>