<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/searchLeaves"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/searchNotifications"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/filterLeaves"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/filter"
        android:visible="false"
        app:showAsAction="always" />


    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/settings" />

</menu>